# WakeLab

./: .gitignore  LICENSE  README.md  pyproject.toml
src/orac_wake_lab/: README.md  __init__.py  app.py
src/orac_wake_lab/models/: __init__.py  project.py  training_job.py  validation.py
src/orac_wake_lab/services/: __init__.py  audio_resample.py  dependency_checks.py  feature_bundle.py  log_stream.py  model_tester.py  near_misses.py  openwakeword_assets.py  openwakeword_train_runner.py  orac_export.py  piper_voice_test.py  positive_clip_generator.py  process_runner.py  project_store.py  real_positives.py  training_config.py  wake_lab_home.py
src/orac_wake_lab/themes/: Anthracite.json  Blue.json  Cobalt.json  DaynNight.json  Greengage.json  GreyGhost.json  Hades.json  Harlequin.json  MoonlitSky.json  MrWhippy.json  NeonBanana.json  NightTrain.json  Oceanix.json  TestCard.json  TrojanBlue.json  set_theme.txt
src/orac_wake_lab/ui/: __init__.py  checks_tab.py  export_tab.py  main_window.py  project_tab.py  test_tab.py  training_tab.py
tests/: test_feature_bundle.py  test_orac_wake_lab.py  test_wake_lab_home.py
