[tool.poetry]
name = "wakelab"
version = "0.1.0"
description = "Managed wake-word training workbench for Orac"
authors = ["Clive Bostock"]
readme = "README.md"
packages = [{include = "orac_wake_lab", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
customtkinter = ">=5.2.2"
pyyaml = "^6.0"
torch = "*"
torchaudio = "*"
numpy = "*"
scipy = "*"
tqdm = "^4.67.3"

[tool.poetry.group.conversion]
optional = true

[tool.poetry.group.conversion.dependencies]
tensorflow = "*"
onnx = "*"
onnx-tf = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
wakelab = "orac_wake_lab.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
